More fixed. Images will be resized to the 3 sized. Only those from Blog are stayed untouched (too much).

--- a/assets/scss/_features.scss
+++ b/assets/scss/_features.scss
@@ -38,6 +38,23 @@
 
   main {
     min-width: 0; /* prevents overflow issues */
+
+      a:not(:has(img))
+      {
+          text-decoration: underline;
+          text-underline-offset: 0.2rem;
+          text-decoration-color: #ccc;
+
+          &:hover
+          {
+              color: theme.$orange-link-hover;
+          }
+      }
+
+      li::marker {
+        content: '—  ';
+      }
+
   }
 
   
